# Eh-I-DeCoder

./: .gitignore  And it should start successfully, showing  CHANGELOG.md  CONVENTIONS.md  README.md  You can now run
bash/: commits-since-last-tag.sh  createRelease.sh
python/: README.md  TODO  __init__.py  aider_server.py  base_wrapper.py  chat_history.py  coder_wrapper.py  commands_wrapper.py  exceptions.py  file_analyzer.py  git_monitor.py  git_operations.py  git_operations_basic.py  git_operations_editor.py  git_operations_rebase.py  git_search.py  io_wrapper.py  jrpc_oo_aider.py  logger.py  lsp_protocol.py  lsp_server.py  lsp_wrapper.py  port_utils.py  process_manager.py  prompt_streamer.py  pyproject.toml  repo.py  repo_file_manager.py  repo_history.py  repo_info.py  requirements.txt  server_config.py  setup.py  simple_std_io.py  webapp_server.py
webapp/: aider-commands.js  app-sidebar.js  assistant-card.js  card-markdown.js  chat-history-panel.js  commands-buttons.js  commands-card.js  commands-tab.js  file-tree.js  find-in-files.js  index.html  main-window.js  merge-editor.js  message-handler.js  my-app.js  package.json  prompt-view.js  repo-tree.js  speech-to-text.js  user-card.js  web-dev-server.config.mjs
webapp/language-server/: constants.js  document-manager.js  document-validator.js  message-handler.js  server.js  symbol-analyzer.js  websocket-server.js
webapp/lsp-server/: server.js
webapp/src/: AppSidebar.js  AssistantCard.js  CardMarkdown.js  Commands.js  CommandsButtons.js  CommandsCard.js  CommandsTab.js  CommitList.js  DiffEditor.js  FileTree.js  FilesAndSettings.js  FindInFiles.js  FuzzySearch.js  GitDiffView.js  GitHistoryView.js  GitMergeView.js  MainWindow.js  MergeEditor.js  MessageHandler.js  MonacoDiffEditor.js  MyApp.js  PromptView.js  RepoTree.js  SpeechToText.js  UserCard.js  Utils.js  card-markdown.js  (+1 more)
(+138 files in other folders)
