[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aider-webapp"
version = "0.1.0"
description = "JSON-RPC server for Aider"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "aider-chat @ git+https://github.com/Aider-AI/aider.git",
    "jrpc-oo @ git+https://github.com/flatmax/jrpc-oo.git"
]
[tool.setuptools]
py-modules = ["io_wrapper", "jrpc_oo_aider"]
